kubernetes/overlays/homelab/infrastructure/dex/resources/service-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-ui-lb
  namespace: dex
  labels:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: homelab
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: homelab
    app.kubernetes.io/managed-by: argocd
    homelab.local/expose: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.131
  ports:
    - name: http
      port: 5556
      protocol: TCP
      targetPort: 5556
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
